@@ -15,12 +15,6 @@ eggs =
 [test]
 recipe = zc.recipe.testrunner
 eggs = ${buildout:eggs}
-environment = test-environment
-
-[test-environment]
-SOFTWARE_HOME = ${buildout:directory}/src
-ZOPE_HOME = ${buildout:directory}
-INSTANCE_HOME = ${buildout:directory}
 
 [scripts]
 recipe = zc.recipe.egg:scripts
